@@ -7,6 +7,7 @@ More detailed changelogs can be found at
         Ensure that all modules we ship are versioned.
         Added experimental support for local IP blacklisting modules; see the
           display_node method in "perldoc OpenGuides" for details.
+        Don't include redirect pages in search results. (#24)
         Include map link URLs in RDF output. (#26)
         Hide historic versions of nodes from search engines. (#207)
 
